<resources>
    <string name="app_name">Smart Nest</string>
    <string name="title_birdhouses">Live Status</string>
    <string name="title_settings">Settings</string>
    <string name="title_events">Events</string>
    <string name="action_dateselect">Date</string>

    <!-- Login -->
    <string name="action_sign_in">Sign in</string>
    <string name="error_incorrect_password">Invalid username or password</string>
    <string name="error_field_required">This field is required</string>
    <string name="action_logout">Logout</string>
    <string name="hint_old_password">Enter Old password</string>
    <string name="hint_new_password">Enter new password</string>
    <string name="hint_confirm_password">Enter new password again</string>
    <string name="pwd_match_error">Confirm password again</string>
    <string name="pwd_error">Invalid password</string>
    <string name="logout_message">Confirm logout?</string>
    <string name="action_account">Account Settings</string>
    <string name="action_login">Change Login</string>

    <!-- Settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_header_switch">Switches</string>
    <string name="pref_header_mp3">Audio Setting</string>
    <string name="apply">Apply</string>
    <string name="track_tag">Track Schedule</string>
    <string name="schedule_for">for</string>
    <string name="new_settings">New</string>
    <string name="refresh">Refresh</string>
    <string name="switch1">Switch 1</string>
    <string name="switch2">Switch 2</string>
    <string name="humidity_range">Humidity Range</string>
    <string name="hour">hour</string>
    <string name="hours">hours</string>
    <string name="minute">minute</string>
    <string name="minutes">minutes</string>
    <string name="track">Track  </string>
    <string name="song">Track Number</string>
    <string name="volume">Volume</string>
    <string name="vol">VOL</string>
    <string name="humidity">Humidity</string>
    <string name="temperature">Temperature</string>
    <string name="nh3">NH3</string>

    <string name="pref_title_ammonia_level">Ammonia Warning Level (ppm)</string>
    <string-array name="pref_nh3_list">
        <item>800</item>
        <item>900</item>
        <item>1000</item>
        <item>1100</item>
        <item>1200</item>
        <item>1300</item>
        <item>1400</item>
        <item>1500</item>
    </string-array>

    <string name="pref_title_ir2">Intrusion</string>
    <string-array name="pref_ir_list_titles">
        <item>Call out</item>
        <item>Send SMS</item>
    </string-array>
    <string name="pref_cat_powerout">Power</string>
    <string name="pref_switch_toggle_humidity">By humidity</string>
    <string name="pref_switch_toggle_timed">By schedule</string>
    <string name="pref_timer_start">Start time</string>
    <string name="set">Set</string>

    <string name="pref_title_interval">Interval (hour)</string>
    <string-array name="pref_interval_list">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="pref_duration_list_title">
        <item>10 minutes</item>
        <item>20 minutes</item>
        <item>30 minutes</item>
        <item>45 minutes</item>
        <item>1 hour</item>
        <item>1.5 hours</item>
        <item>2 hours</item>
        <item>2.5 hours</item>
        <item>3 hours</item>
    </string-array>
    <string-array name="pref_duration_list_values">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
        <item>90</item>
        <item>120</item>
        <item>150</item>
        <item>180</item>
    </string-array>

    <string name="apply_houses">Apply settings to...</string>

    <string-array name="pref_song_list">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
    </string-array>

    <string name="allday">All day</string>
    <string name="custom">Custom</string>
    <string-array name="pref_stoptime_list_title">
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>2 hours</item>
        <item>6 hours</item>
        <item>12 hours</item>
        <item>@string/allday</item>
        <item>@string/custom</item>
    </string-array>
    
    <string-array name="pref_stoptime_list_value">
        <item>30</item>
        <item>60</item>
        <item>120</item>
        <item>360</item>
        <item>720</item>
        <item>1439</item>
        <item>0</item>
    </string-array>
    <string name="title_duration">Duration</string>
    
    <string name="tel">Call Out Number</string>
    <string name="ammonia_level">Ammonia Warning</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="ir1_sms">Entries</string>
    <string name="ir1_notify">Notify Entries</string>
    <string name="ir2_alarm">Alarm Switch</string>
    <string name="ir2_call">Call out</string>
    <string name="ir2_sms">Send SMS</string>
    <string name="ir2_notify">Intrusion Notification</string>
    <string name="power_off_sms">Notify Power Failure</string>
    <string name="power_back_sms">Notify Power Recovery</string>

    <string name="apply_all">ALL</string>
    <string name="detected">ATTN!</string>
    <string name="normal">OK</string>

    <string name="exit_message">Exit app?</string>
    <string name="upload_db">Updated Schedule</string>
    <string name="upload_message">Upload edited schedules to server?</string>
    <string name="discard">Discard changes</string>

    <string name="error_msg">No house registered or network error</string>
    <string name="logs_all">Logs</string>
    <string name="house_name">House Name</string>
    <string name="no_event">Zero events or network error</string>
    <string name="basic_info">Info</string>

    <string name="clock_hour"></string>
    <string name="clock_minute"></string>
    <string name="upload_title">Save Settings</string>

    <string name="event_power_out">Power out!</string>
    <string name="event_power_back">Power resumes</string>
    <string name="event_nh3">Ammonia</string>
    <string name="event_intrusion">Intruder alert!</string>
    <string name="event_entry">Entry detected</string>
    <string name="event_sw_on">Switch ON</string>
    <string name="event_sw_off">Switch OFF</string>
    <string name="event_humidity">Humidity</string>
    <string name="event_temp">Temperature</string>
    <string name="event_count">Count</string>

    <string name="element_sw">Switch</string>
    <string name="element_entry">Entry</string>
    <string name="element_intrusion">Intrusion</string>
    <string name="element_power">Power</string>
    <string name="element_humidity">Humidity</string>
    <string name="element_temp">Temp.</string>
    <string name="element_nh3">NH3</string>
    <string name="element_sum">Count</string>
    <string name="element_unit_count"></string>

    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="error_network">Network Error</string>
    <string name="zero_critical">No recent events</string>
    <string name="year">Year</string>
    <string name="month">Month</string>

    <string name="log_sw">Switches</string>
    <string name="log_entries">Entries</string>
    <string name="log_intrusion">Intrusions</string>
    <string name="log_info">Status</string>
    <string name="log_power">Power</string>
    <string name="log_count">Count</string>

    <string-array name="shifts_titles">
        <item>Daytime (08:00 \u2014 17:59)</item>
        <item>Nighttime (18:00 \u2014 07:59)</item>
    </string-array>
    <string name="sms_tel">SMS Tel.</string>
    <string name="action_server">Change Server</string>
</resources>
