<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
        <ListPreference
            android:defaultValue="0"
            android:key="key_song_id"
            android:entries="@array/pref_song_list"
            android:entryValues="@array/pref_song_list"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/song"/>

        <com.junyenhuang.birdhouse.settings.TimePreference
            android:key="key_timepref_start_1"
            android:title="@string/pref_timer_start"/>

        <!--
        <com.junyenhuang.birdhouse.settings.TimePreference
            android:key="key_timepref_stop_1"
            android:title="@string/pref_timer_stop"/>
        -->

        <com.junyenhuang.birdhouse.settings.MyListPreference
            android:key="key_list_stop_1"
            android:defaultValue="60"
            android:entries="@array/pref_stoptime_list_title"
            android:entryValues="@array/pref_stoptime_list_value"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/title_duration"/>

        <com.junyenhuang.birdhouse.settings.SeekBarPreference
            android:key="key_volume"
            android:title="@string/volume"/>
</PreferenceScreen>
