<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton android:id="@+id/choice_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/ir2_call"/>
        <RadioButton android:id="@+id/choice_sms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/ir2_sms"/>
    </RadioGroup>
    <CheckBox android:id="@+id/select_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/ir2_alarm"/>
</LinearLayout>