<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context="com.junyenhuang.birdhouse.PasswordActivity">
    <include layout="@layout/toolbar" android:id="@+id/toolbari"/>
    <!-- Change Password -->
    <ProgressBar android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />
    <ScrollView android:id="@+id/login_form"
        android:layout_below="@id/toolbari"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/logout_button"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:background="@color/colorTransparentDark">
        <LinearLayout android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText android:id="@+id/old_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:hint="@string/hint_old_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"/>
            </android.support.design.widget.TextInputLayout>
            <LinearLayout android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin">
                <ImageView android:id="@+id/name_icon"
                    android:layout_width="56dp"
                    android:layout_height="56dp"/>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText android:id="@+id/new_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in"
                        android:imeOptions="actionUnspecified"
                        android:inputType="text"
                        android:maxLines="1"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <RelativeLayout android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView android:id="@+id/password_icon"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_gravity="center_horizontal"/>
                <android.support.design.widget.TextInputLayout android:id="@+id/new_password_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/password_icon">
                    <EditText android:id="@+id/new_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_new_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/new_password_layout"
                    android:layout_alignStart="@id/new_password_layout">
                    <EditText android:id="@+id/confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_confirm_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"/>
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>

            <Button android:id="@+id/sign_in_button"
                android:layout_width="180dp"
                android:layout_height="56dp"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/selector_bar"
                android:textColor="@drawable/selector_button_text"
                android:text="@string/action_login"/>
        </LinearLayout>
    </ScrollView>

    <!-- Logout -->
    <Button android:id="@id/logout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_vertical_margin"
        android:text="@string/action_logout"
        android:textStyle="bold"
        android:textColor="@drawable/selector_logout_button_text"
        android:background="@drawable/selector_logout_button"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>
