<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardBackgroundColor="@color/colorTransparentWhite"
    app:cardElevation="2dp">
    <RelativeLayout
        android:id="@+id/card_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/activity_vertical_margin">
        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:text="Track Schedule 1"/>
        <TextView
            android:id="@+id/trackTextView"
            android:text="@string/track"
            android:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/titleTextView"
            android:layout_below="@+id/titleTextView"/>
        <TextView
            android:id="@+id/trackNumTextView"
            android:text="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_alignTop="@id/trackTextView"
            android:layout_toEndOf="@id/trackTextView"/>
        <TextView
            android:id="@+id/startTagTextView"
            android:text="@string/pref_timer_start"
            android:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/trackTextView"
            android:layout_below="@id/trackTextView"/>
        <TextView
            android:id="@+id/startTextView"
            android:text="12:00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_alignTop="@id/startTagTextView"
            android:layout_toEndOf="@id/startTagTextView"/>
        <TextView
            android:id="@+id/stopTagTextView"
            android:text="@string/schedule_for"
            android:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/startTagTextView"
            android:layout_below="@id/startTagTextView"/>
        <TextView
            android:id="@+id/stopTextView"
            android:text="1 hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_alignTop="@id/stopTagTextView"
            android:layout_toEndOf="@id/stopTagTextView"/>
        <TextView
            android:id="@+id/volTextView"
            android:text="@string/vol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_alignTop="@id/trackTextView"
            android:layout_toEndOf="@id/trackNumTextView"/>
        <TextView
            android:id="@+id/volumeTextView"
            android:text="30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/volTextView"
            android:layout_toEndOf="@id/volTextView"/>
        <ImageButton
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:padding="16dp"
            android:background="@android:color/transparent"
            app:srcCompat="@android:drawable/ic_menu_delete"/>
    </RelativeLayout>
</android.support.v7.widget.CardView>