<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/overview_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingActivity">
    <include layout="@layout/toolbar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">
        <LinearLayout android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center">
            <LinearLayout android:id="@+id/general_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/title_height"
                android:orientation="horizontal"
                android:background="@drawable/selector_bar">
                <ImageView android:id="@+id/setting_icon"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="@dimen/title_height"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:layout_gravity="center_vertical"
                    android:padding="12dp"/>
                <TextView android:text="@string/pref_header_general"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@drawable/selector_button_text"
                    android:layout_weight="8"
                    android:layout_width="0dp"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout android:id="@+id/general_view1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/hint_height"
                android:orientation="horizontal"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:background="@color/colorTransparentWhite">
                <TextView
                    android:text="@string/tel"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_gravity="start|center_vertical"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tvTel"
                    android:text="0987654321"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_gravity="center_vertical"
                    android:gravity="end"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout android:id="@+id/general_view2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/hint_height"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:orientation="horizontal"
                android:background="@color/colorTransparentWhite">
                <TextView
                    android:text="@string/ammonia_level"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:maxLines="1"
                    android:layout_gravity="start|center_vertical"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tvNh3"
                    android:text="1000ppm"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_gravity="center_vertical"
                    android:gravity="end"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout android:id="@+id/general_view3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/hint_height"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:orientation="horizontal"
                android:background="@color/colorTransparentWhite">
                <TextView
                    android:text="@string/ir1_notify"
                    android:maxLines="1"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:layout_width="0dp"
                    android:layout_gravity="start|center_vertical"/>
                <ImageView android:id="@+id/imgEntry"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_width="0dp"/>
            </LinearLayout>
            <LinearLayout android:id="@+id/general_view4"
                android:layout_width="match_parent"
                android:layout_height="@dimen/hint_height"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:orientation="horizontal"
                android:background="@color/colorTransparentWhite">
                <TextView
                    android:text="@string/ir2_alarm"
                    android:layout_weight="10"
                    android:layout_width="0dp"
                    android:maxLines="1"
                    android:layout_gravity="start|center_vertical"
                    android:layout_height="wrap_content"/>
                <ImageView android:id="@+id/imgIntrusion"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_width="0dp"/>
            </LinearLayout>
            <LinearLayout android:id="@+id/general_view5"
                android:layout_width="match_parent"
                android:layout_height="@dimen/hint_height"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:orientation="horizontal"
                android:background="@color/colorTransparentWhite">
                <TextView android:text="@string/ir2_notify"
                    android:layout_weight="10"
                    android:layout_width="0dp"
                    android:maxLines="1"
                    android:layout_gravity="start|center_vertical"
                    android:layout_height="wrap_content"/>
                <ImageView android:id="@+id/imgIntrusionNotify"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_width="0dp"/>
            </LinearLayout>
            <LinearLayout android:id="@+id/general_view6"
                android:layout_width="match_parent"
                android:layout_height="@dimen/hint_height"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:orientation="horizontal"
                android:background="@color/colorTransparentWhite">
                <TextView
                    android:text="@string/power_off_sms"
                    android:layout_weight="10"
                    android:layout_width="0dp"
                    android:maxLines="1"
                    android:layout_gravity="start|center_vertical"
                    android:layout_height="wrap_content"/>
                <ImageView android:id="@+id/imgPowerOut"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_width="0dp"/>
            </LinearLayout>
            <LinearLayout android:id="@+id/general_view7"
                android:layout_width="match_parent"
                android:layout_height="@dimen/hint_height"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:orientation="horizontal"
                android:background="@color/colorTransparentWhite">
                <TextView
                    android:text="@string/power_back_sms"
                    android:layout_weight="10"
                    android:layout_width="0dp"
                    android:maxLines="1"
                    android:layout_gravity="start|center_vertical"
                    android:layout_height="wrap_content"/>
                <ImageView android:id="@+id/imgPowerBack"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_width="0dp"/>
            </LinearLayout>
            <LinearLayout android:id="@+id/switch_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/title_height"
                android:layout_marginTop="2dp"
                android:orientation="horizontal"
                android:background="@drawable/selector_bar">
                <ImageView android:id="@+id/switch_icon"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="@dimen/title_height"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:layout_gravity="center_vertical"
                    android:padding="12dp"/>
                <TextView
                    android:text="@string/pref_header_switch"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@drawable/selector_button_text"
                    android:layout_weight="8"
                    android:layout_width="0dp"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout android:id="@+id/audio_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/title_height"
                android:orientation="horizontal"
                android:background="@drawable/selector_bar">
                <ImageView android:id="@+id/audio_icon"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="@dimen/title_height"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:layout_gravity="center_vertical"
                    android:padding="12dp"/>
                <TextView
                    android:text="@string/pref_header_mp3"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    android:textColor="@drawable/selector_button_text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:layout_weight="8"
                    android:layout_width="0dp"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <include layout="@layout/bottom_controls"/>
</LinearLayout>